# virusVerspreiding

./: .gitignore  CMakeLists.txt
src/: Application.cpp  Application.h  Computer.cpp  Computer.h  Model.cpp  Model.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  ResultWriter.cpp  ResultWriter.h  Scenario.cpp  Scenario.h  Simulator.cpp  Simulator.h  Statistics.cpp  Statistics.h  main.cpp  test.cpp
